--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ a {
 body {
   background-color: rgb(34, 34, 72);
   color: white;
+  /* position: relative; */
 }
 
 header {
@@ -22,6 +23,18 @@ header {
   display: flex;
   align-items: center;
   background-color: rgb(14, 25, 53);
+}
+
+footer {
+  width: 100%;
+  padding: 1.5rem;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  background-color: rgb(14, 25, 53);
+  position: absolute;
+  bottom: 0;
+  /* margin-top: 2rem; */
 }
 
 .header-content {
@@ -122,7 +135,7 @@ header {
 }
 
 .article-list {
-    padding: 0.5rem;
+  padding: 0.5rem;
 }
 
 .article-list li {
@@ -133,4 +146,13 @@ header {
 
 .article-list li a {
   color: lightblue;
+}
+
+.flex-footer {
+  width: 100%;
+  display: flex;
+}
+
+.flex-footer a {
+  margin-right: 1rem;
 }
