--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ footer {
   align-items: center;
   flex-direction: column;
   background-color: rgb(14, 25, 53);
-  position: absolute;
+  position: fixed;
   bottom: 0;
   /* margin-top: 2rem; */
 }
@@ -155,4 +155,8 @@ footer {
 
 .flex-footer a {
   margin-right: 1rem;
+}
+
+.id-art {
+  margin-bottom: 7rem;
 }
